--- a/shop.html
+++ b/shop.html
@@ -11,7 +11,7 @@
         <div class="container">
             <nav class="main-navigation">
                 <ul>
-                    <li><a href="barbershop.html">Главная</a></li>
+                    <li><a href="index.html">Главная</a></li>
                     <li><a href="item.html">Информация</a></li>
                     <li><a href="#">Новости</a></li>
                     <li><a href="price.html">Прайс-лист</a></li>
