--- a/item.html
+++ b/item.html
@@ -49,11 +49,11 @@
 					<p>Шампунь Orofluido мягко и деликатно очищает волосы, придает ощущение восточной роскоши, основанный на масляной формуле. Благодаря свойствам шампуня ваши локоны окутаются облаком тонкого аромата амбры и ванили, который придаст вашему образу желаемую загадочность.</p>
 				</div>
 				<div class="description-buy">
-					<p>2900руб</p>
+					<span>2900руб</span>
 					<button class="description-buy-btn">Купить</button>
 				</div>
 				<div class="description-included">
-					<h2>В набор входят</h2>
+					<h3>В набор входят</h3>
 					<ul class="description-included-item">
 						<li>Средство для умывания (50 мл)</li>
 						<li>Средство для умывания (50 мл)</li>
