--- a/shop.html
+++ b/shop.html
@@ -65,59 +65,122 @@
                     </div>
                 </form>
             </div>
-            <div class="shop-product">
-                <ul class="shop-product-item">
-                    <li>
-                        <img src="#" width="#" height="#">
+            <div class="product-list">
+                <div class="product">
+                    <div class="product-img">
+                        <img src="">
+                    </div>
+                    <div class="product-description">
                         <p>Набор для путешествий
-                            <br><span>"baxter of california"</span></p>
-                        <p><span>2 900 руб</span></p>
-                        <button>Купить</button>
-                    </li>
-                    <li>
-                        <img src="#" width="#" height="#">
-                        <p>Набор для путешествий
-                            <br><span>"baxter of california"</span></p>
-                        <p><span>2 900 руб</span></p>
-                        <button>Купить</button>
-                    </li>
-                    <li>
-                        <img src="#" width="#" height="#">
+                            <span>"baxter of california"</span></p>
+                        <div class="product-buy">
+                            <div class="product-buy-price">
+                                2 900руб.
+                            </div>
+                            <div class="btn">
+                                <button>Купить</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img src="">
+                    </div>
+                    <div class="product-description">
+                        <p>Увлажняющий кондиционер
+                            <span>"baxter of california"</span></p>
+                        <div class="product-buy">
+                            <div class="product-buy-price">
+                                750руб.
+                            </div>
+                            <div class="btn">
+                                <button>Купить</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img src="">
+                    </div>
+                    <div class="product-description">
                         <p>Гель для волос
-                            <br><span>"suavecito"</span></p>
-                        <p><span>2 90 руб</span></p>
-                        <button>Купить</button>
-                    </li>
-                    <li>
-                        <img src="#" width="#" height="#">
+                            <span>"suavecito"</span></p>
+                        <div class="product-buy">
+                            <div class="product-buy-price">
+                                290руб.
+                            </div>
+                            <div class="btn">
+                                <button>Купить</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img src="">
+                    </div>
+                    <div class="product-description">
                         <p>Глина для укладки волос
-                            <br><span>"american crew"</span></p>
-                        <p><span>500 руб</span></p>
-                        <button>Купить</button>
-                    </li>
-                    <li>
-                        <img src="#" width="#" height="#">
+                            <span>"american crew"</span></p>
+                        <div class="product-buy">
+                            <div class="product-buy-price">
+                                500руб.
+                            </div>
+                            <div class="btn">
+                                <button>Купить</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img src="">
+                    </div>
+                    <div class="product-description">
                         <p>Гель для волос
-                            <br><span>"american crew"</span></p>
-                        <p><span>300 руб</span></p>
-                        <button>Купить</button>
-                    </li>
-                    <li>
-                        <img src="#" width="#" height="#">
+                            <span>"american crew"</span></p>
+                        <div class="product-buy">
+                            <div class="product-buy-price">
+                                300руб.
+                            </div>
+                            <div class="btn">
+                                <button>Купить</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img src="">
+                    </div>
+                    <div class="product-description">
                         <p>Набор для бритья
-                            <br><span>"baxter of california"</span></p>
-                        <p><span>3 900 руб</span></p>
-                        <button>Купить</button>
-                    </li>
-                </ul>
-                <ul class="shop-product-switch">
-                <li><a href="#"></a>1</li> 
-                <li><a href="#"></a>2</li> 
-                <li><a href="#"></a>3</li> 
-                <li><a href="#"></a>4</li>    
-                </ul>
+                            <span>"baxter of california"</span></p>
+                        <div class="product-buy">
+                            <div class="product-buy-price">
+                                3 900руб.
+                            </div>
+                            <div class="btn">
+                                <button>Купить</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <ul class="shop-product-switch">
+                        <li>
+                            <a href="#"></a>1</li>
+                        <li>
+                            <a href="#"></a>2</li>
+                        <li>
+                            <a href="#"></a>3</li>
+                        <li>
+                            <a href="#"></a>4</li>
+                    </ul>
+                </div>
             </div>
-        </div>
     </main>
     <footer class="main-footer">
         <div class="container">
