--- a/item.html
+++ b/item.html
@@ -50,7 +50,7 @@
 				</div>
 				<div class="description-buy">
 					<span>2900руб</span>
-					<button class="description-buy-btn">Купить</button>
+					<button class="btn">Купить</button>
 				</div>
 				<div class="description-included">
 					<h3>В набор входят</h3>
