--- a/shop.html
+++ b/shop.html
@@ -171,13 +171,13 @@
                 <div>
                     <ul class="shop-product-switch">
                         <li>
-                            <a href="#"></a>1</li>
+                            <a class="btn" href="#"></a>1</li>
                         <li>
-                            <a href="#"></a>2</li>
+                            <a class="btn" href="#"></a>2</li>
                         <li>
-                            <a href="#"></a>3</li>
+                            <a class="btn" href="#"></a>3</li>
                         <li>
-                            <a href="#"></a>4</li>
+                            <a class="btn" href="#"></a>4</li>
                     </ul>
                 </div>
             </div>
